--- a/Cli/Cli.csproj
+++ b/Cli/Cli.csproj
@@ -8,6 +8,12 @@
     </PropertyGroup>
 
     <ItemGroup>
+        <Content Include="appsettings.json">
+            <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
+        </Content>
+    </ItemGroup>
+
+    <ItemGroup>
         <ProjectReference Include="..\ChromiumFetcher\ChromiumFetcher.csproj">
             <ReferenceOutputAssembly>false</ReferenceOutputAssembly>
         </ProjectReference>
