Add initial tests and fakes for client and invoice repo, update appsettings for new BankTransferInfo invoice property

--- a/Cli/appsettings.json
+++ b/Cli/appsettings.json
@@ -10,6 +10,11 @@
       "City": "",
       "PostalCode": "",
       "Country": "Bulgaria"
+    },
+    "SellerBankTransferInfo": {
+      "Iban": "BG00XXXX00000000000000",
+      "BankName": "",
+      "Bic": ""
     }
   },
   "Desktop": {
