--- a/Invoices.Tests/Invoices.Tests.csproj
+++ b/Invoices.Tests/Invoices.Tests.csproj
@@ -10,6 +10,7 @@
 
   <ItemGroup>
     <PackageReference Include="HtmlAgilityPack" Version="1.12.4" />
+    <PackageReference Include="PuppeteerSharp" Version="21.0.1" />
     <PackageReference Include="Microsoft.NET.Test.Sdk" Version="18.0.1" />
     <PackageReference Include="NUnit" Version="4.4.0" />
     <PackageReference Include="NUnit3TestAdapter" Version="6.1.0" />
@@ -18,5 +19,11 @@
   <ItemGroup>
     <ProjectReference Include="..\Invoices\Invoices.csproj" />
   </ItemGroup>
-  
+
+  <ItemGroup>
+    <Content Include="ReferencePdfs\*.pdf">
+      <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
+    </Content>
+  </ItemGroup>
+
 </Project>
