Initialize appsettings with Spark 3Dent data

--- a/Cli/appsettings.json
+++ b/Cli/appsettings.json
@@ -2,19 +2,19 @@
   "App": {
     "StartInvoiceNumber": 1,
     "SellerAddress": {
-      "Name": "",
-      "RepresentativeName": "",
-      "CompanyIdentifier": "",
+      "Name": "\"СМТЛ Спарк 3Дент\" ООД",
+      "RepresentativeName": "Петя Бонева",
+      "CompanyIdentifier": "208300546",
       "VatIdentifier": null,
-      "Address": "",
-      "City": "",
-      "PostalCode": "",
+      "Address": "ул. Мирни дни 13, ет.6, ап.17",
+      "City": "Габрово",
+      "PostalCode": "5300",
       "Country": "Bulgaria"
     },
     "SellerBankTransferInfo": {
-      "Iban": "BG00XXXX00000000000000",
-      "BankName": "",
-      "Bic": ""
+      "Iban": "BG03FINV91501017534825",
+      "BankName": "FIRST INVESTMENT BANK",
+      "Bic": "FINVBGSF"
     }
   },
   "Desktop": {
