Implement invoice management code coordinating repos, exports, files, etc.

--- a/Accounting.Tests/Accounting.Tests.csproj
+++ b/Accounting.Tests/Accounting.Tests.csproj
@@ -16,6 +16,8 @@
 
   <ItemGroup>
     <ProjectReference Include="..\Accounting\Accounting.csproj" />
+    <ProjectReference Include="..\Invoices.Tests\Invoices.Tests.csproj" />
+    <ProjectReference Include="..\Storage\Storage.csproj" />
   </ItemGroup>
   
 </Project>
