Add wide-reaching logging decorators as part of phase 8 of plan.md

--- a/Accounting.Tests/Accounting.Tests.csproj
+++ b/Accounting.Tests/Accounting.Tests.csproj
@@ -18,6 +18,7 @@
     <ProjectReference Include="..\Accounting\Accounting.csproj" />
     <ProjectReference Include="..\Invoices.Tests\Invoices.Tests.csproj" />
     <ProjectReference Include="..\Storage\Storage.csproj" />
+    <ProjectReference Include="..\Utilities.Tests\Utilities.Tests.csproj" />
   </ItemGroup>
   
 </Project>
