--- a/Configuration.Tests/Configuration.Tests.csproj
+++ b/Configuration.Tests/Configuration.Tests.csproj
@@ -13,8 +13,9 @@
         <PackageReference Include="NUnit3TestAdapter" Version="6.1.0" />
     </ItemGroup>
 
-    <ItemGroup>
-        <ProjectReference Include="..\Configuration\Configuration.csproj" />
-    </ItemGroup>
+  <ItemGroup>
+    <ProjectReference Include="..\Configuration\Configuration.csproj" />
+    <ProjectReference Include="..\Utilities.Tests\Utilities.Tests.csproj" />
+  </ItemGroup>
 
 </Project>
