--- a/Storage.Tests/Storage.Tests.csproj
+++ b/Storage.Tests/Storage.Tests.csproj
@@ -14,6 +14,7 @@
 
   <ItemGroup>
     <ProjectReference Include="..\Storage\Storage.csproj" />
+    <ProjectReference Include="..\Utilities.Tests\Utilities.Tests.csproj" />
   </ItemGroup>
   
 </Project>
