Implement app local web server MVP initialization and mark invoice correction support in plan

--- a/Web/Web.csproj
+++ b/Web/Web.csproj
@@ -28,6 +28,7 @@
     </ItemGroup>
 
     <ItemGroup>
+        <ProjectReference Include="..\AppSetup\AppSetup.csproj" />
         <ProjectReference Include="..\ChromiumFetcher\ChromiumFetcher.csproj">
             <ReferenceOutputAssembly>false</ReferenceOutputAssembly>
         </ProjectReference>
