Add facade for openai models and a cli tool for running prompts to them

--- a/CliTools/CliTools.csproj
+++ b/CliTools/CliTools.csproj
@@ -10,6 +10,7 @@
   </PropertyGroup>
 
   <ItemGroup>
+    <PackageReference Include="UglyToad.PdfPig" Version="1.7.0-custom-5" />
     <ProjectReference Include="..\Invoices\Invoices.csproj" />
     <ProjectReference Include="..\Utilities\Utilities.csproj" />
   </ItemGroup>
