--- a/Invoices/Invoices.csproj
+++ b/Invoices/Invoices.csproj
@@ -14,6 +14,7 @@
     <ItemGroup>
       <PackageReference Include="HtmlAgilityPack" Version="1.12.4" />
       <PackageReference Include="PuppeteerSharp" Version="21.0.1" />
+      <PackageReference Include="UglyToad.PdfPig" Version="1.7.0-custom-5" />
       <ProjectReference Include="..\Utilities\Utilities.csproj" />
     </ItemGroup>
 
