Simplify and attempt to fix build failing due to chromium setup

--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -1,4 +1,4 @@
-name: Build & Publish (Web)
+name: Publish Web (Windows)
 
 on:
   workflow_dispatch:
@@ -9,19 +9,8 @@ permissions:
   contents: read
 
 jobs:
-  publish:
-    name: Publish ${{ matrix.rid }}
-    runs-on: ${{ matrix.os }}
-    strategy:
-      fail-fast: false
-      matrix:
-        include:
-          - os: ubuntu-latest
-            rid: linux-x64
-            artifact_name: spark3dent-web-linux-x64
-          - os: windows-latest
-            rid: win-x64
-            artifact_name: spark3dent-web-win-x64
+  publish-win:
+    runs-on: windows-latest
 
     steps:
       - name: Checkout
@@ -35,45 +24,32 @@ jobs:
       - name: Restore
         run: dotnet restore ./Web/Web.csproj
 
-      - name: Publish (single-file, self-contained)
+      # ✅ Key fix: build ChromiumFetcher without RID so dotnet run --no-build can find ChromiumFetcher.exe
+      - name: Build ChromiumFetcher (no RID)
+        run: dotnet build ./ChromiumFetcher/ChromiumFetcher.csproj -c Release
+
+      - name: Publish Web (single-file, self-contained)
         run: >
           dotnet publish ./Web/Web.csproj
           -c Release
-          -r ${{ matrix.rid }}
+          -r win-x64
           --self-contained true
           -p:PublishSingleFile=true
           -p:IncludeNativeLibrariesForSelfExtract=true
           -p:DebugType=None
           -p:DebugSymbols=false
-          -o ./artifacts/publish/${{ matrix.rid }}
+          -o ./artifacts/publish/win-x64
 
-      # Zip the publish output so it's easy to download as one file
-      - name: Zip (Linux)
-        if: runner.os == 'Linux'
-        run: |
-          cd ./artifacts/publish/${{ matrix.rid }}
-          tar -czf ../../${{ matrix.artifact_name }}.tar.gz .
-
-      - name: Zip (Windows)
-        if: runner.os == 'Windows'
+      - name: Zip
         shell: pwsh
         run: |
-          $src = "artifacts/publish/${{ matrix.rid }}"
-          $dst = "artifacts/${{ matrix.artifact_name }}.zip"
+          $src = "artifacts/publish/win-x64"
+          $dst = "artifacts/spark3dent-web-win-x64.zip"
           Compress-Archive -Path "$src/*" -DestinationPath $dst -Force
 
-      - name: Upload artifact (Linux)
-        if: runner.os == 'Linux'
+      - name: Upload artifact
         uses: actions/upload-artifact@v4
         with:
-          name: ${{ matrix.artifact_name }}
-          path: artifacts/${{ matrix.artifact_name }}.tar.gz
-          if-no-files-found: error
-
-      - name: Upload artifact (Windows)
-        if: runner.os == 'Windows'
-        uses: actions/upload-artifact@v4
-        with:
-          name: ${{ matrix.artifact_name }}
-          path: artifacts/${{ matrix.artifact_name }}.zip
+          name: spark3dent-web-win-x64
+          path: artifacts/spark3dent-web-win-x64.zip
           if-no-files-found: error
